# gpr200-fa2023-joshua-sinclair-chong

./: CMakeLists.txt  README.md
assignments/assignment1_helloTriangle/: main.cpp
assignments/assignment2_sunset/: main.cpp
assignments/assignment2_sunset/assets/: fragmentShader.frag  vertexShader.vert
assignments/assignment3_textures/: main.cpp
assignments/assignment3_textures/assets/: fragmentShader.frag
assignments/assignment4_transformations/: main.cpp
assignments/assignment4_transformations/assets/: fragmentShader.frag  vertexShader.vert
assignments/assignment5_camera/: main.cpp
assignments/assignment5_camera/assets/: vertexShader.vert
assignments/assignment6_proceduralGeometry/: main.cpp
assignments/assignment7_lighting/: main.cpp
assignments/assignment7_lighting/assets/: defaultLit.frag
assignments/assignment8_final/: CMakeLists.txt  main.cpp
assignments/assignment8_final/assets/: defaultLit.frag  gerstner.frag  gerstner.vert  simepleSin.frag  simpleSin.frag  simpleSin.vert  skybox.frag  skybox.vert  unlit.frag  water.frag  water.vert
assignments/assignment8_final/assets/heightmap/: heightMap.frag  heightMap.vert
assignments/assignment8_final/assets/skybox/: skybox.frag
assignments/assignment8_final/assets/water/: gerstner.frag  gerstner.vert  simpleSin.vert  water.frag  water.vert
core/ew/: camera.h  procGen.cpp  procGen.h  shader.cpp  shader.h  texture.cpp  texture.h
core/jsc/: camera.h  light.h  procGen.cpp  procGen.h  shader.cpp  shader.h  texture.cpp  transformations.h  waves.cpp  waves.h
(+2 files in other folders)
